# StereoTest-Bundle

./: .gitmodules  CMakeLists.txt  README.md
stereo_calib/: CMakeLists.txt
stereo_calib/conf/: stereo_calib.xml
